// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component Matches the snapshot 1`] = `
<img
  alt=""
  className="profile-image"
  src="002-psyduck.png"
/>
`;

exports[`Avatar component Matches the snapshot2 1`] = `
<img
  alt=""
  className="profile-image"
  src="001-snorlax.png"
/>
`;
